[project]
name = "tha-utils-helper"
version = "0.2.2"
description = "A Tabular Helper utility library with general-purpose helpers, string normalization, numeric parsing, and date formatting for the tha-* ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["utilities", "helpers", "string", "numeric", "date", "rows", "csv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_utils_helper"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
